fix: pmd issues